<resources>
    <string name="app_name">MadLevel4Task2</string>
    <string name="action_settings">Settings</string>
    <string name="Txt_Welcome">Welcome</string>
    <string name="Txt_Instructions">Instructions: select Rock, Paper of Scissors to play</string>
    <string name="Txt_Statistics">Your all time Statistics</string>
    <string name="Txt_you_win">You Win!</string>
    <string name="Txt_VS">V.S.</string>
    <string name="Txt_Win">Win: %d</string>
    <string name="Txt_Draw">Draw: %d</string>
    <string name="Txt_Loses">Lose: %d</string>
    <string name="Txt_Computer">Computer</string>
    <string name="Txt_You">You</string>
    <string name="Title_Win">YOU WIN!</string>
    <string name="Title_Lose">YOU LOSE!</string>
    <string name="Title_Draw">DRAW!!</string>
    <string name="Title_History">Your Game History</string>
    <string name="TODO">TODO</string>
    <string name="icon">Icon</string>
    <string name="game_fragment_label">Game Fragment</string>
</resources>