<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <TextView
        android:id="@+id/Txt_Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Txt_Welcome"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Txt_Instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/Txt_Instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Txt_Welcome" />

    <ImageView
        android:id="@+id/IMG_paper"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="15dp"
        android:background="@color/design_default_color_primary"
        android:contentDescription="@string/TODO"
        android:src="@drawable/paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/IMG_Sciccors"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/IMG_Rock"
        app:layout_constraintTop_toBottomOf="@+id/TXT_You"
        app:layout_constraintVertical_bias="0.993" />

    <ImageView
        android:id="@+id/IMG_Sciccors"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:background="@color/design_default_color_primary"
        android:contentDescription="@string/TODO"
        android:src="@drawable/scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/IMG_paper"
        app:layout_constraintTop_toBottomOf="@+id/TXT_You"
        app:layout_constraintVertical_bias="0.993" />

    <ImageView
        android:id="@+id/IMG_Rock"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:background="@color/design_default_color_primary"
        android:contentDescription="@string/TODO"
        android:src="@drawable/rock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/IMG_paper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TXT_You"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/TXT_Statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Txt_Statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Txt_Instructions" />

    <TextView
        android:id="@+id/TXT_Wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Txt_Win"
        app:layout_constraintEnd_toStartOf="@+id/TXT_Draws"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TXT_Statistics" />

    <TextView
        android:id="@+id/TXT_Draws"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:text="@string/Txt_Draw"
        app:layout_constraintEnd_toStartOf="@+id/Txt_Loses"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TXT_Wins"
        app:layout_constraintTop_toBottomOf="@+id/TXT_Statistics" />

    <TextView
        android:id="@+id/Txt_Loses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Txt_Loses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TXT_Draws"
        app:layout_constraintTop_toBottomOf="@+id/TXT_Statistics" />

    <ImageView
        android:id="@+id/IMG_Player_Hands"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/TODO"
        android:src="@drawable/paper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TXT_Vs"
        app:layout_constraintTop_toBottomOf="@+id/TXT_Game_Result" />

    <TextView
        android:id="@+id/TXT_Vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/Txt_VS"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/IMG_Player_Hands"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/IMG_computer_Hand"
        app:layout_constraintTop_toBottomOf="@+id/TXT_Game_Result" />

    <ImageView
        android:id="@+id/IMG_computer_Hand"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/TODO"
        android:src="@drawable/rock"
        app:layout_constraintEnd_toStartOf="@+id/TXT_Vs"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TXT_Game_Result" />

    <TextView
        android:id="@+id/TXT_Game_Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/Txt_you_win"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TXT_Draws" />

    <TextView
        android:id="@+id/TXT_Computer"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginTop="16dp"
        android:text="@string/Txt_Computer"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/TXT_You"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IMG_computer_Hand" />

    <TextView
        android:id="@+id/TXT_You"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/Txt_You"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TXT_Computer"
        app:layout_constraintTop_toBottomOf="@+id/IMG_Player_Hands" />
</androidx.constraintlayout.widget.ConstraintLayout>