<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/IMG_You"
        android:layout_width="145dp"
        android:layout_height="127dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Txt_VS"
        app:layout_constraintTop_toBottomOf="@+id/Txt_Datum"
        app:srcCompat="@drawable/paper" />

    <TextView
        android:id="@+id/Txt_Computer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Txt_Computer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Txt_You"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IMG_comp"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/IMG_comp"
        android:layout_width="145dp"
        android:layout_height="127dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/TODO"
        app:layout_constraintEnd_toStartOf="@+id/Txt_VS"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Txt_Datum"
        app:srcCompat="@drawable/paper" />

    <TextView
        android:id="@+id/Txt_VS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Txt_VS"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/IMG_You"
        app:layout_constraintEnd_toStartOf="@+id/IMG_You"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/IMG_comp"
        app:layout_constraintTop_toTopOf="@+id/IMG_You"
        app:layout_constraintVertical_bias="0.463" />

    <TextView
        android:id="@+id/Txt_You"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Txt_You"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Txt_Computer"
        app:layout_constraintTop_toBottomOf="@+id/IMG_You"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Txt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Txt_Datum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Txt_status" />

</androidx.constraintlayout.widget.ConstraintLayout>